Update GitHub Actions workflow to use PAT for pushing changes

--- a/.github/workflows/generate_diagrams.yml
+++ b/.github/workflows/generate_diagrams.yml
@@ -48,6 +48,7 @@ jobs:
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
+        git remote set-url origin https://github-actions:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}
         git add diagrams/diagram-*.png
         git commit -m 'Generate Mermaid diagram'
-        git push https://github.com/${{ github.repository }} HEAD:main
+        git push origin HEAD:main
