--- a/JobsOCBaseConfigDemo/配置info.plist/Info.plist
+++ b/JobsOCBaseConfigDemo/配置info.plist/Info.plist
@@ -2,6 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
     <dict>
+        <!-- 用于指定应用程序的显示名称是否本地化 -->
+        <key>LSHasLocalizedDisplayName</key>
+        <true/>
+        <!-- 应用支持的所有语言代码，这些语言代码应该与您的本地化资源文件夹相匹配 -->
+        <key>CFBundleLocalizations</key>
+        <array>
+            <string>en</string>
+            <string>zh-Hans</string>
+            <string>fil-PH</string>
+        </array>
+        <!-- 开发区域的语言代码 -->
+        <key>CFBundleDevelopmentRegion</key>
+        <string>en</string>
         <key>UILaunchStoryboardName</key>
         <string>LaunchScreen</string>
         <!-- iOS 状态栏颜色的修改【全局设置 全局是NO、局部是YES】View controller-based status bar appearance : NO-->
