--- a/JobsOCBaseConfigDemo/Info.plist
+++ b/JobsOCBaseConfigDemo/Info.plist
@@ -2,6 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
     <dict>
+        <!-- Core Data -->
+        <key>NSPersistentStoreTypeKey</key>
+        <string>SQLite</string>
         <!-- 应用程序是否需要持久的 Wi-Fi 连接才能运行。已废弃 -->
         <key>UIRequiresPersistentWiFi</key>
         <true/>
