--- a/.github/workflows/generate_diagrams.yml
+++ b/.github/workflows/generate_diagrams.yml
@@ -3,8 +3,11 @@ name: Generate Mermaid Diagrams
 on:
   push:
     branches:
-      - main  # 或者您希望的其他分支
-  workflow_dispatch:  # 允许手动触发
+        - main
+    pull_request:
+    branches:
+        - main
+workflow_dispatch: # 允许手动触发
 
 jobs:
   build:
