--- a/.github/workflows/generate_diagrams.yml
+++ b/.github/workflows/generate_diagrams.yml
@@ -3,11 +3,11 @@ name: Generate Mermaid Diagrams
 on:
   push:
     branches:
-        - main
-    pull_request:
+      - main
+  pull_request:
     branches:
-        - main
-workflow_dispatch: # 允许手动触发
+      - main
+  workflow_dispatch: # 允许手动触发
 
 jobs:
   build:
@@ -35,12 +35,10 @@ jobs:
     - name: Commit and push diagram
       if: success()
       env:
-        ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
-        git add diagrams/diagram.png
+        git add diagram.png
         git commit -m 'Auto-Generate Mermaid diagram'
-        git push https://${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git HEAD:main
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        git push
