--- a/.github/workflows/generate_diagrams.yml
+++ b/.github/workflows/generate_diagrams.yml
@@ -45,4 +45,4 @@ jobs:
         git config --global user.email 'github-actions@github.com'
         git add diagram-*.png
         git commit -m 'Auto-Generate Mermaid diagrams'
-        git push https://${{ github.actor }}:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git HEAD:main
+        git push https://295060456:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git HEAD:main
