--- a/.github/workflows/generate_diagrams.yml
+++ b/.github/workflows/generate_diagrams.yml
@@ -35,14 +35,18 @@ jobs:
 
     - name: Show current directory structure
       run: ls -R
+      
+    - name: Check GITHUB_TOKEN permissions
+      run: |
+       curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }} -I
 
     - name: Commit and push diagrams
       if: success()
       env:
-        ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
         git add diagram-*.png
         git commit -m 'Auto-Generate Mermaid diagrams'
-        git push https://295060456:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git HEAD:main
+        git push
