--- a/.github/workflows/generate_diagrams.yml
+++ b/.github/workflows/generate_diagrams.yml
@@ -23,7 +23,7 @@ jobs:
         node-version: '20'  # 使用最新版本的 Node.js
         
     - name: Install dependencies
-       run: |
+      run: |
         sudo apt-get update
         sudo apt-get install -y chromium-browser
         npm install -g @mermaid-js/mermaid-cli
@@ -34,22 +34,15 @@ jobs:
         ls -la # 列出当前目录中的文件
 
     - name: Show current directory structure
-       run: ls -R
-      
-    - name: Print environment variables
-       run: printenv
-    
-    - name: Check GITHUB_TOKEN permissions
-       run: |
-        curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }} -I
+      run: ls -R
 
     - name: Commit and push diagrams
-       if: success()
+      if: success()
       env:
-        ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
         git add diagram-*.png
         git commit -m 'Auto-Generate Mermaid diagrams'
-        git push https://${{ github.actor }}:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git HEAD:main
+        git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
