--- a/JobsOCBaseConfigDemo/配置info.plist/备份Info.plist
+++ b/JobsOCBaseConfigDemo/配置info.plist/备份Info.plist
@@ -37,6 +37,7 @@
         <!-- 开发区域的语言代码 -->
         <key>CFBundleDevelopmentRegion</key>
         <string>en</string>
+        <!-- 配置了UILaunchStoryboardName，项目里面就必须将 Main.storyboard 包含到工程，进入编译期-->
         <key>UILaunchStoryboardName</key>
         <string>LaunchScreen</string>
         <!-- iOS 状态栏颜色的修改【全局设置 全局是NO、局部是YES】View controller-based status bar appearance : NO-->
