--- a/JobsOCBaseConfigDemo/Info.plist
+++ b/JobsOCBaseConfigDemo/Info.plist
@@ -41,6 +41,9 @@
         <!-- iOS 状态栏颜色的修改【全局设置 全局是NO、局部是YES】View controller-based status bar appearance : NO-->
         <key>UIViewControllerBasedStatusBarAppearance</key>
         <false/>
+        <!--只设置UIViewControllerBasedStatusBarAppearance为false，而不设置UIStatusBarHidden为true，在某些情况下会显示本应该隐藏的iOS状态栏-->
+        <key>UIStatusBarHidden</key>
+        <true/>
         <!-- iOS 状态栏颜色的修改【全局设置】Status bar style : Light Content-->
         <key>UIStatusBarStyle</key>
         <string>UIStatusBarStyleLightContent</string>
